@@ -12,6 +12,7 @@ export(consensus_to_ppm)
 export(consensus_to_ppmAA)
 export(convert_motifs)
 export(convert_type)
+export(count_klets)
 export(create_motif)
 export(create_sequences)
 export(enrich_motifs)
